# vize

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SUPPORT.md  flake.nix  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts
crates/vize/: Cargo.toml  README.md
crates/vize/src/: config.rs  lib.rs  main.rs
crates/vize/src/commands/: fmt.rs  ide.rs  lint.rs  mod.rs  musea.rs  profile.rs  ready.rs  upgrade.rs
crates/vize/src/commands/check/: dts.rs  nuxt.rs  runner.rs  tsconfig_inputs.rs
crates/vize/tests/: check_cli.rs
crates/vize/tests/snapshots/: check_cli__check_can_emit_declarations.snap
crates/vize_canon/: Cargo.toml  README.md
crates/vize_canon/src/: corsa_server.rs  diagnostic.rs  file_uri.rs  intelligence.rs  lib.rs  script_parse.rs  source_map.rs  tests.rs  typecheck_service.rs
crates/vize_canon/src/batch/: error.rs  executor.rs  import_rewriter.rs  mod.rs  runtime_deps.rs  source_map.rs  type_checker.rs  virtual_project.rs  virtual_ts.rs
crates/vize_canon/src/batch/executor/: cli.rs  diagnostics.rs
crates/vize_canon/src/batch/snapshots/: vize_canon__batch__error__tests__corsa_not_found_error_message.snap  vize_canon__batch__error__tests__corsa_not_found_no_pm.snap  vize_canon__batch__import_rewriter__tests__multiple_rewrites.snap  vize_canon__batch__virtual_project__tests__register_vue_file_rewrites_child_imports.snap  vize_canon__batch__virtual_project__tests__strip_json_comments_preserves_strings.snap  vize_canon__batch__virtual_ts__tests__generate_from_content.snap
crates/vize_canon/src/batch/type_checker/: tests.rs
crates/vize_canon/src/checker/: mod.rs  reporting.rs  runner.rs
crates/vize_canon/src/checker/snapshots/: vize_canon__checker__tests__check_unknown_identifier.snap
crates/vize_canon/src/corsa_bridge/: bridge.rs  types.rs
crates/vize_canon/src/lsp_client/: bootstrap.rs  diagnostics.rs  diagnostics_api.rs  lifecycle.rs  mod.rs  paths.rs  queries.rs  session.rs  tests.rs  utils.rs
crates/vize_canon/src/sfc_typecheck/: mod.rs  runner.rs
crates/vize_canon/src/sfc_typecheck/snapshots/: vize_canon__sfc_typecheck__tests__type_check_component_with_props_and_events.snap  vize_canon__sfc_typecheck__tests__type_check_defined_binding.snap  vize_canon__sfc_typecheck__tests__type_check_v_for_destructuring.snap  vize_canon__sfc_typecheck__tests__type_check_virtual_ts_generation.snap
crates/vize_canon/src/snapshots/: vize_canon__batch__type_checker__tests__batch_type_checker_declaration_emit_outputs.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_complex_component.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_dynamic_component.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_generic_component.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_nested_v_if_v_else.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_scoped_slots.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_simple_component.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_template_refs.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_v_for_destructuring.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_v_model.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_with_composables.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_with_emits.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_with_props.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_with_slots.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_with_v_for.snap  vize_canon__virtual_ts__tests__virtual_ts_auto_import_stubs_skip_imported_names.snap  vize_canon__virtual_ts__tests__virtual_ts_component_prop_checks_respect_same_element_vif_guard.snap  vize_canon__virtual_ts__tests__virtual_ts_multiple_event_handlers.snap  vize_canon__virtual_ts__tests__virtual_ts_nested_vif_velse_chain.snap  vize_canon__virtual_ts__tests__virtual_ts_reserved_prop_and_hyphenated_slot_names.snap  vize_canon__virtual_ts__tests__virtual_ts_scoped_slot_expressions.snap  vize_canon__virtual_ts__tests__virtual_ts_template_binding_unwraps.snap  vize_canon__virtual_ts__tests__virtual_ts_vfor_component_props_in_scope.snap  vize_canon__virtual_ts__tests__virtual_ts_vfor_destructuring_scope.snap  vize_canon__virtual_ts__tests__virtual_ts_vue_setup_compiler_macros.snap  vize_canon__virtual_ts__tests__virtual_ts_vue_template_context.snap  vize_canon__virtual_ts__tests__virtual_ts_vue_template_context_with_globals.snap
crates/vize_canon/src/virtual_ts/: expressions.rs  generator.rs  helpers.rs  mod.rs  props.rs  scope.rs
crates/vize_fresco/: Cargo.toml  README.md
crates/vize_fresco/benches/: render.rs
crates/vize_fresco/src/: napi.rs  terminal.rs
crates/vize_fresco/src/input/: mod.rs
crates/vize_fresco/src/input/ime/: preedit.rs
crates/vize_fresco/src/layout/: engine.rs
crates/vize_fresco/src/napi/: layout.rs  terminal.rs  types.rs
crates/vize_fresco/src/render/: diff.rs  tree.rs
crates/vize_fresco/src/terminal/: backend.rs
crates/vize_fresco/src/text/: mod.rs  segment.rs
crates/vize_maestro/: Cargo.toml  README.md
crates/vize_maestro/src/: lib.rs
crates/vize_maestro/src/document/: store.rs
crates/vize_maestro/src/ide/: code_lens.rs  corsa_support.rs  document_link.rs  mod.rs  rename.rs  semantic_tokens.rs  workspace_symbols.rs
crates/vize_maestro/src/ide/completion/: mod.rs  service.rs  template.rs
crates/vize_maestro/src/ide/definition/: bindings.rs  helpers.rs  mod.rs  script.rs  service.rs  template.rs
crates/vize_maestro/src/ide/diagnostics/: collectors.rs  corsa.rs  mod.rs
crates/vize_maestro/src/ide/file_rename/: .manual.rs.pending-snap  manual.rs  mod.rs
crates/vize_maestro/src/ide/hover/: corsa.rs  mod.rs  script.rs  template.rs
crates/vize_maestro/src/ide/inlay_hint/: mod.rs
crates/vize_maestro/src/ide/references/: mod.rs  script.rs  template.rs
crates/vize_maestro/src/server/: capabilities.rs  format.rs  handlers.rs  helpers.rs  mod.rs  state.rs
crates/vize_maestro/src/virtual_code/: generator.rs  mod.rs  script_code.rs  style_code.rs  template_code.rs
(+1416 files in other folders)
