[package]
name = "vize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Vize - High-performance Vue.js toolchain in Rust"
publish = false

[[bin]]
name = "vize"
path = "src/main.rs"

[lib]
name = "vize"
path = "src/lib.rs"

[features]
default = ["glyph"]
glyph = ["dep:vize_glyph", "vize_maestro/glyph"]

[dependencies]
# Vize crates (re-exported for unified documentation)
vize_carton = { workspace = true }
vize_relief = { workspace = true }
vize_armature = { workspace = true }
vize_atelier_core = { workspace = true }
vize_atelier_dom = { workspace = true }
vize_atelier_vapor = { workspace = true }
vize_atelier_sfc = { workspace = true, features = ["native"] }
vize_glyph = { workspace = true, optional = true }
vize_patina = { workspace = true }
vize_canon = { workspace = true, features = ["native"] }
vize_croquis = { workspace = true }
vize_musea = { workspace = true }
vize_maestro = { workspace = true }

# CLI
clap.workspace = true

# Directory walking with .gitignore support
ignore.workspace = true

# Glob pattern matching
glob.workspace = true

# Multithreading
rayon.workspace = true

# Async runtime (for LSP)
tokio = { workspace = true, features = ["rt-multi-thread"] }
futures.workspace = true

# Serialization (for JSON output)
serde = { workspace = true }
serde_json = { workspace = true }

# TypeScript/JSX transpilation
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_codegen = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_transformer = { workspace = true }

# Regex for script language detection
regex-lite.workspace = true

# PKL configuration language
rpkl.workspace = true

# Home/config directory detection
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
