[package]
name = "vize_canon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Canon - The standard of correctness for Vize type checking"

[features]
default = ["native"]
native = ["dep:which", "dep:walkdir", "dep:dirs", "dep:corsa", "dep:lsp-types"]

[dependencies]
vize_carton.workspace = true
vize_croquis.workspace = true
vize_relief.workspace = true
vize_armature.workspace = true
vize_atelier_core.workspace = true
vize_atelier_sfc.workspace = true

# OXC for parsing and AST manipulation (import rewriting)
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_span.workspace = true
oxc_allocator.workspace = true

# File system walking (for batch type checking)
walkdir = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true
lsp-types = { workspace = true, optional = true }

# Utilities
dashmap.workspace = true
tracing.workspace = true
which = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
thiserror.workspace = true
corsa = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
insta.workspace = true
