[package]
name = "vize_maestro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Maestro - Language Server Protocol implementation for Vize Vue templates"
publish = false

[features]
default = ["native", "glyph"]
glyph = ["dep:vize_glyph"]
native = ["vize_canon/native"]

[dependencies]
# LSP Framework
tower-lsp.workspace = true
# lsp-types is re-exported by tower-lsp, use that version

# Async Runtime
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true

# Text Processing
ropey.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rpkl.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dashmap.workspace = true
parking_lot.workspace = true
ignore.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true

# Internal crates
vize_carton.workspace = true
vize_relief.workspace = true
vize_armature.workspace = true
vize_atelier_sfc.workspace = true
vize_glyph = { workspace = true, optional = true }
vize_patina.workspace = true
vize_canon = { workspace = true }
vize_croquis.workspace = true
vize_musea.workspace = true
vize_vitrine = { workspace = true, default-features = false }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
